--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="CluckHub.png" class="col-12 mx-auto" width="auto" height="auto">
         <form>
           <input id="txtUsername" type="email" placeholder="Username or Email" class="form-control mt-3">
-          <input id="txtPassword" type="text" placeholder="Password" class="form-control mt-3">
+          <input id="txtPassword" type="password" placeholder="Password" class="form-control mt-3">
           <button id="btnLogin" type="button" class="btn btn-success mt-3 col-12">Login</button>
           <button id="btnRegister" type="button" class="btn btn-warning mt-1 col-12">Register Account</button>
         </form>
