--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
                     </div>
                 </div>
                 <div class="col-4">
+                    <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                        <div class="card-body"> <!-- This is the Light -->
+                          <div class="image-container" id="btnLbOn">
+                            <button type="button" class="btn">
+                                <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                            </button>
+                          </div>
+                          <div class="image-container" id="btnLbOff" style="display: none;">
+                            <button type="button" class="btn">
+                                <i class="bi bi-lightbulb-off"></i>
+                            </button>
+                          </div>
+                <div class="col-4">
                     <div class="card" style="background-color: rgb(77, 127, 110);">
                         <div class="card-body"> <!-- This is the Door -->
                           <div class="image-container" id="btnDopen">
@@ -78,6 +91,29 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-4">
+                      <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                          <div class="card-body">
+                              <div class="image-container" id="btnLbOn"> <!-- This is the door -->
+                                  <button type="button" class="btn">
+                                      <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                  </button>
+                              </div>
+                              <div class="image-container" id="btnLbOff" style="display: none;">
+                                  <button type="button" class="btn">
+                                      <i class="bi bi-lightbulb-off"></i>
+                                  </button>
+                              </div>
+                              <div class="card-body" style="display: inline-block;">
+                                <p>Door Control.</p>
+                                <div class="form-check form-switch">
+                                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                                  <label class="form-check-label" style="color: white;" for="flexSwitchCheckDefault">Light on or off</label>
+                                </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
                     <div class="col-4">
                       <div class="card" style="background-color: rgb(77, 127, 110);">
                           <div class="card-body">
@@ -102,6 +138,25 @@
                       </div>
                   </div>
                 </div>
+                <div class="col-12 row" >
+                  <div class="col-4">
+                      <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                          <div class="card-body">
+                              <div class="image-container">
+                                <i class="bi bi-egg-fill text-white" style="font-size: 65px;" id="egg"></i>
+                                  <div class="overlay-text">Egg Counter</div>
+                                  <div class="slide-container">
+                                      <div class="value-container">
+                                          <span id="demo">45</span>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-4">
+                      <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                          <div class="card-body"> <!-- This is the Light -->
                 <div class="col-12 row" >
                   <div class="col-4">
                       <div class="card" style="background-color: rgb(77, 127, 110);">
@@ -138,6 +193,28 @@
                                     <label class="form-check-label" for="flexSwitchCheckDefault">Door Control</label>
                                   </div>
                               </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                            <div class="card-body">
+                                <div class="image-container" id="btnLbOn"> <!-- This is the door -->
+                                    <button type="button" class="btn">
+                                        <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                    </button>
+                                </div>
+                                <div class="image-container" id="btnLbOff" style="display: none;">
+                                    <button type="button" class="btn">
+                                        <i class="bi bi-lightbulb-off"></i>
+                                    </button>
+                                </div>
+                                <div class="card-body" style="display: inline-block;">
+                                  <p>Door Control.</p>
+                                  <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                                    <label class="form-check-label" style="color: white;" for="flexSwitchCheckDefault">Light on or off</label>
+                                  </div>
+                                </div>
                           </div>
                       </div>
                       <div class="col-4">
