--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 </div>
                 <div class="col-4">
                     <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                        <div class="card-body"> <!-- This is the Light -->
-                          <div class="image-container" id="btnLbOn">
+                        <div class="card-body"> <!-- This is the Door -->
+                          <div class="image-container" id="btnDopen">
                             <button type="button" class="btn">
-                                <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="door" data-state="on"></i>
                             </button>
                           </div>
                           <div class="image-container" id="btnLbOff" style="display: none;">
@@ -81,7 +81,7 @@
                     <div class="col-4">
                       <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
                           <div class="card-body">
-                              <div class="image-container" id="btnLbOn"> <!-- This is the door -->
+                              <div class="image-container" id="btnLbOn"> <!-- This is the light -->
                                   <button type="button" class="btn">
                                       <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
                                   </button>
@@ -326,14 +326,14 @@
             let strState = $(this).attr('data-state');
             if(strState == 'on'){
                 $('#btnDopen').attr('data-state','off');
-                $('#light').addClass('bi bi-door-closed');
-                $('#light').removeClass('bi bi-door-open');
-                $('#light').removeClass('text-warning');
+                $('#door').addClass('bi bi-door-closed');
+                $('#door').removeClass('bi bi-door-open');
+                $('#door').removeClass('text-warning');
             } else {
                 $('#btnDopen').attr('data-state','on');
-                $('#light').addClass('bi bi-door-open');
-                $('#light').removeClass('bi bi-door-closed');
-                $('#light').addClass('text-warning');
+                $('#door').addClass('bi bi-door-open');
+                $('#door').removeClass('bi bi-door-closed');
+                $('#door').addClass('text-warning');
             }
           })
 
