--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="card-body">
                             <div class="image-container">
                               <i class="bi bi-thermometer text-info" style="font-size: 65px;" id="thermometer"></i>
-                                <div class="overlay-text">Temperature Control</div>
+                                <div aria-label="Temperature Control" class="overlay-text">Temperature Control</div>
                                 <div class="slide-container">
                                     <div class="value-container">
                                         <span id="demo">45</span>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="col-4">
-                    <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
+                    <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px; justify-content: center;">
                         <div class="card-body"> <!-- This is the Door -->
                           <div class="image-container" id="btnDopen">
                             <button type="button" class="btn">
@@ -120,7 +120,7 @@
                   </div>
                   <div class="col-4">
                       <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                          <div class="card-body"> <!-- This is the Light -->
+                          <div class="card-body"> <!-- This is Food -->
                             <div class="image-container" id="btnLbOn">
                               <button type="button" class="btn">
                                   <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
@@ -132,32 +132,27 @@
                               </button>
                             </div>
                                   <p>Door Control.</p>
-                                  <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault">Door Control</label>
-                                  </div>
                               </div>
                           </div>
                       </div>
                       <div class="col-4">
                         <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
                             <div class="card-body">
-                                <div class="image-container" id="btnLbOn"> <!-- This is the door -->
+                                <div class="image-container" id="btnVOn"> <!-- This is Live Video -->
                                     <button type="button" class="btn">
-                                        <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                        <i class="bi bi-camera-video-off text-warning" style="font-size: 65px;" id="vid" data-state="on"></i>
                                     </button>
                                 </div>
-                                <div class="image-container" id="btnLbOff" style="display: none;">
+                                <div class="image-container" id="btnVOn" style="display: none;">
                                     <button type="button" class="btn">
-                                        <i class="bi bi-lightbulb-off"></i>
+                                        <i class="bi bi-camera-video-on"></i>
                                     </button>
+                                    <iframe width="420" height="315"
+                                      src="https://www.youtube.com/watch?v=H6_YpVBzqNw?autoplay=1&mute=1">
+                                    </iframe>
                                 </div>
                                 <div class="card-body" style="display: inline-block;">
-                                  <p>Door Control.</p>
-                                  <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" style="color: white;" for="flexSwitchCheckDefault">Light on or off</label>
-                                  </div>
+                                  <p>Live Feed</p>
                                 </div>
                             </div>
                         </div>
@@ -336,6 +331,22 @@
                 $('#door').addClass('text-warning');
             }
           })
+
+        //Camera
+        $('#btnVOn').on('click',function(){
+            let strState = $(this).attr('data-state');
+            if(strState == 'off'){
+                $('#btnDopen').attr('data-state','on');
+                $('#vid').addClass('bi-camera-video-on');
+                $('#vid').removeClass('bi bi-camera-video-off');
+                $('#vid').removeClass('text-warning');
+            } else {
+                $('#btnDopen').attr('data-state','off');
+                $('#vid').addClass('bi bi-camera-video-off');
+                $('#vid').removeClass('bi-camera-video-on');
+                $('#vid').addClass('text-warning');
+            }
+          })  
 
 
 //
